# Utility-Service-Provider

./: .gitignore  Bill.cpp  Bill.h  Customer.cpp  Customer.h  Provider.cpp  Provider.h  README.md  Service.cpp  Service.h  build.ps1  database_populator.cpp  main.cpp  newfile.db  newfile.sql  sql
UtilityProviderApp/: CMakeLists.txt  CustomerPage.cpp  CustomerPage.h  ProviderPage.cpp  ProviderPage.h  TableModifier.cpp  TableModifier.h  buildInstructions.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/: Bill.cpp  Bill.h  Customer.cpp  Customer.h  DataLoader.cpp  DataLoader.h  Provider.cpp  Provider.h  Service.cpp  Service.h  dataLoader.h  newfile.db  populateBill.cpp  populateBill.h  populateCustomer.cpp  populateCustomer.h  populateProvider.cpp  populateProvider.h  populateService.cpp  populateService.h
